--- a/deviceRegister/deviceRegister.html
+++ b/deviceRegister/deviceRegister.html
@@ -10,11 +10,25 @@
   <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
   <style>
+    /* 템플릿 색상 유지 */
     .bg-info { background-color: #007bff !important; }
     .sb-sidenav-dark, .sb-sidenav-dark .sb-sidenav-menu-heading { background-color: #007bff; color: rgba(255, 255, 255, 0.5); }
     .sb-sidenav-dark .nav-link { color: rgba(255, 255, 255, 0.8); }
     .sb-sidenav-dark .nav-link:hover { color: #fff; }
     .sb-sidenav-dark .nav-link.active { color: #fff; background-color: rgba(255, 255, 255, 0.15); }
+    /* 센서 데이터 폼의 가독성을 위한 스타일 */
+    .data-setting-item {
+        border: 1px solid #dee2e6;
+        border-radius: .25rem;
+        padding: 15px;
+        margin-bottom: 15px;
+        background-color: #f8f9fa;
+    }
+    .data-setting-item label {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: 500;
+    }
   </style>
 </head>
 <body class="sb-nav-fixed">
@@ -91,57 +105,67 @@
   <div id="layoutSidenav_content">
     <main>
       <div class="container-fluid px-4">
-        <h1 class="mt-4">장비 등록</h1>
+        <h1 class="mt-4">장치 등록</h1>
         <ol class="breadcrumb mb-4">
           <li class="breadcrumb-item"><a href="../adminMenu/adminMenu.html">대시보드 / 메뉴</a></li>
           <li class="breadcrumb-item active">장비 등록</li>
         </ol>
 
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-lg-8">
 
             <div class="card shadow mb-4">
-              <div class="card-header"><i class="fas fa-info-circle me-1"></i> 장치 기본 정보</div>
+              <div class="card-header"><i class="fas fa-server me-1"></i> 장치 연결 정보</div>
               <div class="card-body">
-                <div id="basicInfo">
-                  <div class="mb-3">
-                    <label for="deviceName" class="form-label">장치명</label>
-                    <input type="text" class="form-control" id="deviceName" placeholder="예: 공장 온도 센서 A">
-                  </div>
-                  <div class="mb-3">
-                    <label for="deviceSerial" class="form-label">시리얼번호</label>
-                    <input type="text" class="form-control" id="deviceSerial" placeholder="예: device1">
-                  </div>
+                <div class="mb-3">
+                  <label for="deviceName" class="form-label">장치명</label>
+                  <input type="text" id="deviceName" class="form-control" placeholder="예: 공장 온도 센서 A">
+                </div>
 
-                  <div class="row">
-                    <div class="col-md-6 mb-3">
-                      <label for="edgeSerial" class="form-label">엣지 시리얼 (Edge Serial)</label>
-                      <input type="text" class="form-control" id="edgeSerial" placeholder="예: edge-gw-001">
-                    </div>
-                    <div class="col-md-6 mb-3">
-                      <label for="portPath" class="form-label">포트 경로 (Port Path)</label>
-                      <input type="text" class="form-control" id="portPath" placeholder="예: /dev/ttyUSB0">
-                    </div>
+                <div class="mb-3">
+                  <label for="deviceSerial" class="form-label">장비 시리얼</label>
+                  <input type="text" id="deviceSerial" class="form-control" placeholder="예: deviceSN1">
+                </div>
+
+                <div class="row">
+                  <div class="col-md-8 mb-3">
+                    <label for="ip" class="form-label">Edge IP</label>
+                    <input type="text" id="ip" class="form-control" placeholder="예: 192.168.1.119">
                   </div>
-                  <button id="registerDeviceBtn" class="btn btn-primary mt-2">
-                    <i class="fas fa-link me-2"></i> 장비 등록 및 연결 테스트
+                  <div class="col-md-4 mb-3">
+                    <label for="port" class="form-label">Edge Port</label>
+                    <input type="number" id="port" class="form-control" placeholder="예: 8081">
+                  </div>
+                </div>
+
+                <div class="d-grid mt-3">
+                  <button id="registerDeviceBtn" class="btn btn-primary btn-lg">
+                    <i class="fas fa-link me-2"></i> 장치 연결 테스트
                   </button>
                 </div>
               </div>
             </div>
 
+            <h2 class="mt-4">센서 데이터 설정</h2>
             <div class="card shadow mb-4">
-              <div class="card-header"><i class="fas fa-database me-1"></i> 데이터 설정 (연결 후 활성화)</div>
+              <div class="card-header d-flex justify-content-between align-items-center">
+                <span><i class="fas fa-microchip me-1"></i> 센서 데이터 목록</span>
+                <button id="addSensorBtn" class="btn btn-sm btn-info text-white" style="display: none;">
+                  <i class="fas fa-plus me-1"></i> 센서 추가
+                </button>
+              </div>
               <div class="card-body">
-                <div id="dataSettings" class="text-center p-3">
-                  장치 연결 테스트를 먼저 진행해주세요.
+                <div id="dataSettings" class="bg-light p-3 rounded">
+                  <p class="text-muted text-center mb-0">연결 테스트를 진행하면 센서 데이터 설정 폼이 나타납니다.</p>
                 </div>
               </div>
             </div>
 
-            <button id="finalRegisterBtn" class="btn btn-success btn-lg mt-3" disabled>
-              <i class="fas fa-check-circle me-2"></i> 최종 등록
-            </button>
+            <div class="d-grid mt-3 mb-5">
+              <button id="finalRegisterBtn" class="btn btn-success btn-lg" disabled>
+                <i class="fas fa-check-circle me-2"></i> 최종 등록
+              </button>
+            </div>
 
           </div>
         </div>
@@ -164,6 +188,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="../src/js/scripts.js"></script>
 
-<script src="../deviceRegister/deviceRegister.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
+
+<script src="./deviceRegister.js"></script>
 </body>
 </html>
