--- a/public/history.html
+++ b/public/history.html
@@ -138,6 +138,7 @@
                                 <input type="date" id="startDate" />
                                 <input type="date" id="endDate" />
                                 <button onclick="setCustomRange()">기간 적용</button>
+                                <button id="downloadCsvBtn">CSV 다운로드</button>
                             </div>
                         </main>
                     </div>
@@ -517,6 +518,52 @@ function parseJwt(token) {
             }
         });
     }
+
+// --- CSV 다운로드 기능 ---
+function downloadCSV(filename, labels, datasets) {
+    if (!labels || labels.length === 0 || !datasets || datasets.length === 0) {
+        alert("내보낼 데이터가 없습니다.");
+        return;
+    }
+
+    // CSV 헤더: 첫 컬럼은 날짜, 이후 각 데이터셋의 라벨
+    const headers = ["날짜", ...datasets.map(ds => ds.label)];
+    const rows = [headers];
+
+    // 날짜별 데이터 정렬
+    for (let i = 0; i < labels.length; i++) {
+        const row = [labels[i]];
+        for (let j = 0; j < datasets.length; j++) {
+            const value = datasets[j].data[i] ?? "";
+            row.push(value);
+        }
+        rows.push(row);
+    }
+
+    // CSV 문자열 생성
+    const csvContent = rows.map(r => r.join(",")).join("\n");
+
+    // Blob으로 파일 다운로드
+    const blob = new Blob([csvContent], { type: "text/csv;charset=utf-8;" });
+    const link = document.createElement("a");
+    link.href = URL.createObjectURL(blob);
+    link.download = filename;
+    link.click();
+}
+
+// 버튼 이벤트 연결
+document.getElementById("downloadCsvBtn").addEventListener("click", () => {
+    if (!myChart) {
+        alert("차트 데이터가 없습니다.");
+        return;
+    }
+
+    const labels = myChart.data.labels;
+    const datasets = myChart.data.datasets;
+    const filename = `chart_data_${new Date().toISOString().slice(0,10)}.csv`;
+
+    downloadCSV(filename, labels, datasets);
+});
 
     // --- 이벤트 핸들러 및 기타 ---
 
