응답데이터

--- a/deviceStatus/deviceStatus.html
+++ b/deviceStatus/deviceStatus.html
@@ -203,7 +203,7 @@
                 <dd class="col-sm-8"><span class="badge ${getStatusBadgeClass(resultDto.dataStatus)}">${resultDto.dataStatus || 'N/A'}</span></dd>
             </dl>
 
-            <h5 class="mt-4">엣지 응답 원본 (dataPayload)</h5>
+            <h5 class="mt-4">응답 데이터</h5>
             <pre class="bg-light p-3 border rounded" style="white-space: pre-wrap; word-break: break-all;">${latestDataText}</pre>
         `;
     }
